--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         }
         context.closePath();
         // create the fill
-        context.fillStyle = '#FF3399';
+        context.fillStyle = '#00FFFF';
         context.fill();
         // create the image
         var image = new Image();
